objects/ASI_CRM_Distribution_Cost__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
                <value>
                    <fullName>Duty Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipLabel>Product Category</relationshipLabel>
        <relationshipName>ASI_CRM_Distribution_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Distribution Cost</label>
    <listViews>
        <fullName>ASI_CRM_MY_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Product_Category__c</columns>
        <columns>ASI_CRM_Market__c</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_Cost__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Distribution_Cost__c.ASI_CRM_MY_Allowance,ASI_CRM_Distribution_Cost__c.ASI_CRM_MY_Revenue</value>
        </filters>
        <label>ASI CRM MY - All</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Allowance</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Product_Category__c</columns>
        <columns>ASI_CRM_Market__c</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Distribution_Cost__c.ASI_CRM_MY_Allowance</value>
        </filters>
        <label>ASI CRM MY - Allowance</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Revenue</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Product_Category__c</columns>
        <columns>ASI_CRM_Market__c</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Distribution_Cost__c.ASI_CRM_MY_Revenue</value>
        </filters>
        <label>ASI CRM MY - Revenue</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DCN{00000000}</displayFormat>
        <label>Distribution Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Cost</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Allowance</fullName>
        <active>true</active>
        <label>ASI CRM MY - Allowance</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Revenue</fullName>
        <active>true</active>
        <label>ASI CRM MY - Revenue</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>